# drumming

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
Source/: DrumInput.cpp  DrumInput.h  DrumNotesView.cpp  DrumNotesView.h  DrumSynth.cpp  DrumSynth.h  Main.cpp  MainComponent.cpp  MainComponent.h  MidiPlayer.cpp  MidiPlayer.h  PitchedSynth.cpp  PitchedSynth.h
